Put everything in main element into a gride and set displayed-questions id to margin bottom 0 so displayed questions won't shift the rest of the tags in that element. New feature: timer will stop when quiz is complete.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -98,10 +98,10 @@ header p {
 /* Main/Questions section styling*/
 #displayed-questions {
     text-align: center;
-    margin: 75px 5% 0px 5%;
+    margin: auto 5% 0px 5%;
     font-size: 35px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    visibility: hidden;
+    /* visibility: hidden; */
 }
 
 #displayed-answers {
@@ -124,6 +124,13 @@ input {
 #outcome {
     text-align: center;
     font-size: 20px;
+}
+
+/* Put everything in main into a grid */
+main {
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: 30% 40% 20% 10%;
 }
 
 /* Enter name and display score styling */
